--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.27.0"
+home = "0.5.5"
+serde = { version ="1.0.190", features = ["derive"] }
+serde_json = "1.0.107"
 tui = "0.19.0"
